--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.15.3",
     "@mui/material": "^5.15.3",
+    "@reduxjs/toolkit": "^2.1.0",
     "parcel": "^2.10.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.20.1"
   },
   "devDependencies": {
